# Etticproject-backend-2325

./: README.md  createcomment.py  createpost.py  db.sqlite3  dbinfo.py  docker-compose.yaml  manage.py  pyproject.toml
ettic/: asgi.py  settings.py  urls.py  views.py  wsgi.py
ettic/templates/auth/: login.html
spots/: admin.py  models.py  urls.py  views.py
spots/migrations/: 0001_initial.py  0002_alter_spot_title.py  0003_comment_down_comment_up_post_down_post_up.py  0004_remove_post_user.py  0005_post_user.py  0006_alter_post_user.py  0007_alter_post_user.py  0008_remove_post_user.py  0009_post_user.py  0010_alter_post_user.py
spots/templates/auth/: login.html  signup.html
spots/templates/spots/: base.html  comments_view.html  spot_detail.html  spot_list.html
